create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -692,6 +692,7 @@ a {
 }
 .cid-s48udlf8KU .mbr-section-title {
   text-align: left;
+  color: #2299aa;
 }
 .cid-s48udlf8KU .mbr-section-subtitle {
   text-align: left;
