--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -688,6 +688,27 @@ a {
 .cid-sN5eaR4yh7 {
   background-image: url("../../../assets/images/dsc-312-2000x1333.jpg");
 }
+.cid-sN5eaR4yh7 .mbr-section-title {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-sN5eaR4yh7 .mbr-text,
+.cid-sN5eaR4yh7 .mbr-section-btn {
+  text-align: center;
+}
+.cid-sN5pwRPdc4 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #98dee8;
+}
+.cid-sN5pwRPdc4 blockquote {
+  border-color: #2299aa;
+  border-radius: 4px;
+  background-color: #ffffff;
+}
+.cid-sN5pwRPdc4 .mbr-section-title {
+  color: #2299aa;
+}
 .cid-sN5bVtAk23 {
   background-image: url("../../../assets/images/background7.jpg");
 }
@@ -1041,47 +1062,10 @@ a {
     left: -1rem;
   }
 }
-.cid-sN5nJC6hIz {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
-}
-@media (max-width: 991px) {
-  .cid-sN5nJC6hIz .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-sN5nJC6hIz .row {
-  flex-direction: row-reverse;
-}
-.cid-sN5nJC6hIz img {
-  width: 100%;
-}
-@media (min-width: 992px) {
-  .cid-sN5nJC6hIz .text-wrapper {
-    padding: 2rem;
-  }
-}
-.cid-sN5nJC6hIz .mbr-section-title {
-  color: #2299aa;
-}
-.cid-sN5pwRPdc4 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #98dee8;
-}
-.cid-sN5pwRPdc4 blockquote {
-  border-color: #2299aa;
-  border-radius: 4px;
-  background-color: #ffffff;
-}
-.cid-sN5pwRPdc4 .mbr-section-title {
-  color: #2299aa;
-}
 .cid-sN5gTs9x76 {
   padding-top: 5rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #98dee8;
 }
 .cid-sN5gTs9x76 img,
 .cid-sN5gTs9x76 .item-img {
@@ -1137,10 +1121,13 @@ a {
 .cid-sN5gTs9x76 .item-subtitle {
   text-align: left;
 }
+.cid-sN5gTs9x76 .mbr-section-subtitle {
+  color: #000000;
+}
 .cid-sN5kMYCubM {
   padding-top: 0rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #98dee8;
 }
 .cid-sN5kMYCubM img,
 .cid-sN5kMYCubM .item-img {
