create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -699,7 +699,7 @@ a {
 .cid-sOFZ9UvkF0 {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background: #fafafa;
+  background-image: url("../../../assets/images/carlosam-3-2000x1333.jpg");
 }
 .cid-sOFZ9UvkF0 .team-card {
   margin-bottom: 2rem;
@@ -1956,7 +1956,7 @@ a {
 .cid-sOGwhvmw2b {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/cueva-del-rey-2000x3000.jpg");
 }
 .cid-sOGwhvmw2b .card:not(:nth-last-child(1)) {
   margin-bottom: 2rem;
